--- a/scss/imports/core/_layouts.scss
+++ b/scss/imports/core/_layouts.scss
@@ -17,7 +17,7 @@ body {
     width: 100%;
     max-width: $container-max-width;
     margin: auto;
-    @include text(1.2rem, pnr, 2rem, $black-cl, none); // tuỳ chỉnh
+    @include text(1.2rem, utm-r, 2rem, $black-cl, none); // tuỳ chỉnh
     background: $white-cl;
     position: relative;
 
@@ -27,32 +27,39 @@ body {
         padding-left: var(--gap);
         margin-right: auto;
         margin-left: auto;
-        @include xs {
+        @include sm {
             padding-right: calc(var(--gap) / 2);
             padding-left: calc(var(--gap) / 2);
         }
     }
     .container {
         width: 100%;
-        padding-right: 0;
-        padding-left: 0;
+        // padding-right: 0;
+        // padding-left: 0;
+        padding-right: calc(var(--gap) / 2);
+        padding-left: calc(var(--gap) / 2);
         margin-right: auto;
         margin-left: auto;
     }
 
     @media (min-width: $xxs-min) {
+        .container-fluid,
         .container {
-            padding-right: calc(var(--gap) / 2);
-            padding-left: calc(var(--gap) / 2);
+            // padding-right: calc(var(--gap) / 2);
+            // padding-left: calc(var(--gap) / 2);
             max-width: 54rem;
         }
     }
     @media (min-width: $xs-min) {
+        .container-fluid,
         .container {
             max-width: 72rem;
         }
     }
     @media (min-width: $sm-min) {
+        .container-fluid {
+            max-width: 100%;
+        }
         .container {
             max-width: 96rem;
         }
@@ -68,13 +75,17 @@ body {
         margin: auto;
         overflow: hidden;
         @include visible;
-        @include transform(scaleX(1));
-        @include transform-origin(right center);
-        @include transition($t $cubic);
-        &.--scaleX {
-            @include transform(scaleX(0.75));
-            @include transform-origin(right center);
-            @include transition($t $cubic);
+    }
+
+    .overlay {
+        @include fullscreen(true);
+        background: rgba(0, 0, 0, 0.75);
+        z-index: var(--z-fixed);
+        @include visible(0);
+        @include transition($cubic $t);
+        &.active {
+            @include visible(1);
+            @include transition($cubic $t);
         }
     }
     @include lg {
