--- a/dest/fonts.css
+++ b/dest/fonts.css
@@ -2,45 +2,45 @@
 
 /* VÍ DỤ - tuỳ chỉnh theo từng dự án*/
 @font-face {
-    font-family: 'pnl';
-    src: url('../fonts/ProximaNova-Light.woff2') format('woff2'),
-        url('../fonts/ProximaNova-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: fallback;
-}
-
-@font-face {
-    font-family: 'pnb';
-    src: url('../fonts/ProximaNova-Bold.woff2') format('woff2'),
-        url('../fonts/ProximaNova-Bold.woff') format('woff');
+    font-family: 'din-b';
+    src: url('../fonts/DINCondensed-Bold.woff2') format('woff2'),
+        url('../fonts/DINCondensed-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: fallback;
 }
 
 @font-face {
-    font-family: 'pnsb';
-    src: url('../fonts/ProximaNova-SemiBold.woff2') format('woff2'),
-        url('../fonts/ProximaNova-SemiBold.woff') format('woff');
-    font-weight: 600;
-    font-style: normal;
-    font-display: fallback;
-}
-
-@font-face {
-    font-family: 'pnr';
-    src: url('../fonts/ProximaNova-Regular.woff2') format('woff2'),
-        url('../fonts/ProximaNova-Regular.woff') format('woff');
+    font-family: 'sfu-r';
+    src: url('../fonts/SFUDINEngAlt.woff2') format('woff2'),
+        url('../fonts/SFUDINEngAlt.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: fallback;
 }
 
 @font-face {
-    font-family: 'pneb';
-    src: url('../fonts/ProximaNova-Extrabld.woff2') format('woff2'),
-        url('../fonts/ProximaNova-Extrabld.woff') format('woff');
+    font-family: 'sfu-l';
+    src: url('../fonts/SFUDINLight.woff2') format('woff2'),
+        url('../fonts/SFUDINLight.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: fallback;
+}
+
+@font-face {
+    font-family: 'utm-r';
+    src: url('../fonts/UTMAvo.woff2') format('woff2'),
+        url('../fonts/UTMAvo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: fallback;
+}
+
+@font-face {
+    font-family: 'utm-b';
+    src: url('../fonts/UTMAvoBold.woff2') format('woff2'),
+        url('../fonts/UTMAvoBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: fallback;
